@@ -10979,9 +10979,13 @@ bool is_downloading_state(int const st)
 
 				if (aep != ae->endpoints.end())
 				{
+					// if we can't find the hostname, the tracker is probably
+					// out of service. Wait a day before trying it again
+					seconds32 const extra_delay = (ec == boost::asio::error::host_not_found)
+						? hours(24) : hours(0);
 					local_endpoint = aep->local_endpoint;
 					aep->failed(settings().get_int(settings_pack::tracker_backoff)
-						, retry_interval);
+						, std::max(retry_interval, extra_delay));
 					aep->last_error = ec;
 					aep->message = msg;
 					fails = aep->fails;
