@@ -1,3 +1,4 @@
+	* back-off tracker hostname looksups resulting in NXDOMAIN
 	* fix binding sockets to outgoing interface
 	* add new socks5_alert to trouble shoot SOCKS5 proxies
 
